<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">


    <LinearLayout
            android:id="@+id/ll_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/time_icon"/>

        <TextView
                android:id="@+id/tv_time"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="..."
                android:textColor="@color/white"
                android:textSize="10sp"/>
    </LinearLayout>


    <TextView
            android:id="@+id/tv_check_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginTop="25dp"
            android:textStyle="bold"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:background="@mipmap/ok_bg"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/list_title"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                <View
                        android:layout_width="30dp"
                        android:layout_height="0dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/green"
                        android:text="@string/list_hg"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="21dp"
                    android:layout_marginTop="8dp">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/list_col_hphm"
                        android:gravity="center_horizontal"
                        android:textSize="15sp"
                        android:textColor="@color/white"/>

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/list_col_aj"
                        android:gravity="center_horizontal"
                        android:textSize="15sp"
                        android:textColor="@color/white"/>

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/list_col_hj"
                        android:gravity="center_horizontal"
                        android:textSize="15sp"
                        android:textColor="@color/white"/>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/list_hg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <View
                android:layout_width="20dp"
                android:layout_height="0dp"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:background="@mipmap/ok_bg"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/list_title"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                <View
                        android:layout_width="30dp"
                        android:layout_height="0dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red"
                        android:text="@string/list_bhg"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="21dp"
                    android:layout_marginTop="8dp">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/list_col_hphm"
                        android:gravity="center_horizontal"
                        android:textSize="15sp"
                        android:textColor="@color/white"/>

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/list_col_aj"
                        android:gravity="center_horizontal"
                        android:textSize="15sp"
                        android:textColor="@color/white"/>

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/list_col_hj"
                        android:gravity="center_horizontal"
                        android:textSize="15sp"
                        android:textColor="@color/white"/>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/list_bhg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp">

        <TextView
                android:id="@+id/tv_hg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/l"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text=""/>

        <View
                android:layout_width="20dp"
                android:layout_height="0dp"/>

        <TextView
                android:id="@+id/tv_bhg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/l"
                android:textSize="18sp"
                android:paddingLeft="5dp"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:text=""/>
    </LinearLayout>

    <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="20dp">

        <TextView
                android:id="@+id/tv_check_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text=""/>

    </LinearLayout>
</LinearLayout>